# httpplus

./: .gitignore  changelog.md  pyproject.toml  readme.md
src/http-plus-purplelemons-dev/: __init__.py  main_handler.py
src/http_plus_purplelemons_dev/: __init__.py  asyncServer.py  auth.py  communication.py  communications.py  content_types.py  handler.py  html.py  main_handler.py  server.py  static_pages.py  static_responses.py  types.py
src/http_plus_purplelemons_dev.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: async_server.py  server.py  socket_server.py  test.py  test.sh  test.txt
tests/errors/401/: .html
tests/errors/404/: .html
tests/pages/: .css  .html  .js
tests/pages/about/: .html  .py
